--- a/bundles/binding/org.openhab.binding.chromecast/build.properties
+++ b/bundles/binding/org.openhab.binding.chromecast/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                libs/api-v2-0.0.4-SNAPSHOT.jar,\
-               libs/jmdns-3.4.1.jar
+               libs/jmdns-3.4.1.jar,\
+               libs/protobuf-java-2.6.1.jar
 output.. = target/classes/
